; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qede/extr_qede_filter.c_qede_flow_spec_ipv6_cmp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qede/extr_qede_filter.c_qede_flow_spec_ipv6_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qede_arfs_tuple = type { i64, i32, i32 }

@ETH_P_IPV6 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qede_arfs_tuple*, %struct.qede_arfs_tuple*)* @qede_flow_spec_ipv6_cmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qede_flow_spec_ipv6_cmp(%struct.qede_arfs_tuple* %0, %struct.qede_arfs_tuple* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.qede_arfs_tuple*, align 8
  %5 = alloca %struct.qede_arfs_tuple*, align 8
  store %struct.qede_arfs_tuple* %0, %struct.qede_arfs_tuple** %4, align 8
  store %struct.qede_arfs_tuple* %1, %struct.qede_arfs_tuple** %5, align 8
  %6 = load %struct.qede_arfs_tuple*, %struct.qede_arfs_tuple** %4, align 8
  %7 = getelementptr inbounds %struct.qede_arfs_tuple, %struct.qede_arfs_tuple* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i32, i32* @ETH_P_IPV6, align 4
  %10 = call i64 @htons(i32 %9)
  %11 = icmp ne i64 %8, %10
  br i1 %11, label %19, label %12

12:                                               ; preds = %2
  %13 = load %struct.qede_arfs_tuple*, %struct.qede_arfs_tuple** %5, align 8
  %14 = getelementptr inbounds %struct.qede_arfs_tuple, %struct.qede_arfs_tuple* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i32, i32* @ETH_P_IPV6, align 4
  %17 = call i64 @htons(i32 %16)
  %18 = icmp ne i64 %15, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %12, %2
  store i32 0, i32* %3, align 4
  br label %37

20:                                               ; preds = %12
  %21 = load %struct.qede_arfs_tuple*, %struct.qede_arfs_tuple** %4, align 8
  %22 = getelementptr inbounds %struct.qede_arfs_tuple, %struct.qede_arfs_tuple* %21, i32 0, i32 2
  %23 = load %struct.qede_arfs_tuple*, %struct.qede_arfs_tuple** %5, align 8
  %24 = getelementptr inbounds %struct.qede_arfs_tuple, %struct.qede_arfs_tuple* %23, i32 0, i32 2
  %25 = call i64 @memcmp(i32* %22, i32* %24, i32 4)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %20
  store i32 0, i32* %3, align 4
  br label %37

28:                                               ; preds = %20
  %29 = load %struct.qede_arfs_tuple*, %struct.qede_arfs_tuple** %4, align 8
  %30 = getelementptr inbounds %struct.qede_arfs_tuple, %struct.qede_arfs_tuple* %29, i32 0, i32 1
  %31 = load %struct.qede_arfs_tuple*, %struct.qede_arfs_tuple** %5, align 8
  %32 = getelementptr inbounds %struct.qede_arfs_tuple, %struct.qede_arfs_tuple* %31, i32 0, i32 1
  %33 = call i64 @memcmp(i32* %30, i32* %32, i32 4)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %28
  store i32 0, i32* %3, align 4
  br label %37

36:                                               ; preds = %28
  store i32 1, i32* %3, align 4
  br label %37

37:                                               ; preds = %36, %35, %27, %19
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local i64 @htons(i32) #1

declare dso_local i64 @memcmp(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
